<resources>
    <string name="app_name">NewsApplication</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sign_out_string">Sign out</string>
    <string name="menu_home">Home</string>
    <string name="menu_breaking">Breaking News</string>
    <string name="menu_entertainment">Entertainment</string>
    <string name="menu_business">Business</string>
    <string name="menu_tech">Technology</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_science">Science</string>
    <string name="menu_health">Health</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_fav">Favourites</string>
    <string name="image_des">Image</string>
    <string name="image_des_ic_share">Share</string>
    <string name="types_update_btn_text">Update</string>
    <string name="types_checkbox_sport">Sports</string>
    <string name="types_title_text">News Types!</string>
    <string name="types_checkbox_health">Health</string>
    <string name="types_checkbox_science">Science</string>
    <string name="types_checkbox_tech">Technology</string>
    <string name="types_checkbox_business">Business</string>
    <string name="types_checkbox_entertainment">Entertainment</string>
    <string name="message_subscribed">Subscribe Successful</string>
    <string name="message_subscribe_failed">Subscribe Failed</string>
    <string name="message_unsubscribed">Unsubscribe Successful</string>
    <string name="message_unsubscribe_failed">Unsubscribe Failed</string>
    <string name="health_notification">Health Notification</string>

</resources>