<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_breaking"
            android:icon="@drawable/ic_menu_breaking"
            android:title="@string/menu_breaking" />

        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_menu_fav"
            android:title="@string/menu_fav" />

        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/ic_menu_entertainment"
            android:title="@string/menu_entertainment" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_menu_business"
            android:title="@string/menu_business" />
        <item
            android:id="@+id/nav_tech"
            android:icon="@drawable/ic_menu_tech"
            android:title="@string/menu_tech" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/ic_menu_sports"
            android:title="@string/menu_sports" />
        <item
            android:id="@+id/nav_science"
            android:icon="@drawable/ic_menu_science"
            android:title="@string/menu_science" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/ic_menu_health"
            android:title="@string/menu_health" />
    </group>

    <item android:title="User Preferences">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_profile"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>


</menu>