<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.newsapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_world"
        android:name="com.example.newsapplication.ui.world.WorldFragment"
        android:label="@string/menu_world"
        tools:layout="@layout/fragment_world" />

    <fragment
        android:id="@+id/nav_business"
        android:name="com.example.newsapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_business"
        tools:layout="@layout/fragment_breaking" />
    <fragment
        android:id="@+id/nav_breaking"
        android:name="com.example.newsapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_breaking"
        tools:layout="@layout/fragment_breaking" />
</navigation>